--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -5,26 +5,23 @@
             <li class="contacts-list__item">
                 <b class="place-card">Cafe</b>
                 <ul class="contacts-list__card-city">
-                    <li>
+                    <li class="contacts-list__card-city-item">
                         <p class="city-card">Chicago</p>
-                    </li>
-                    <li>
+
                         <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                 </ul>
                 <ul class="contacts-list__card-time">
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Monday - Friday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
                     </li>
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Saturday - Sunday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
@@ -39,26 +36,23 @@
             <li class="contacts-list__item">
                 <b class="place-card">Foodtruck</b>
                 <ul class="contacts-list__card-city">
-                    <li>
+                    <li class="contacts-list__card-city-item">
                         <p class="city-card">Los Angeles</p>
-                    </li>
-                    <li>
+
                         <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                 </ul>
                 <ul class="contacts-list__card-time">
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Monday - Friday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
                     </li>
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Saturday - Sunday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
@@ -72,26 +66,23 @@
             <li class="contacts-list__item">
                 <b class="place-card">Cafe</b>
                 <ul class="contacts-list__card-city">
-                    <li>
+                    <li class="contacts-list__card-city-item">
                         <p class="city-card">New York</p>
-                    </li>
-                    <li>
+
                         <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                     </li>
                 </ul>
                 <ul class="contacts-list__card-time">
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Monday - Friday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
                     </li>
-                    <li>
+                    <li class="contacts-list__card-time-item">
                         <p class="day-card">Saturday - Sunday</p>
-                    </li>
-                    <li>
+
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
