--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
     <!--header-->
    
     <header class="header">
-        <div class="container headder-container">
+        <div class="container header-container">
 
             <nav class="header__nav">
-                <a class="header__logo link" href=""><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
-                <ul class="menu-list list">
-                    <li class="menu-list__item"><a class="menu-list__link link" href="">Home</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link link" href="">About us</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link link" href="">How it’s made?</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link link" href="">Our products</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link link" href="">Contact</a></li>
+                <a class="header__logo" href=""><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
+                <ul class="menu-list">
+                    <li class="menu-list__item"><a class="menu-list__link" href="">Home</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="">About us</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="">How it’s made?</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="">Our products</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="">Contact</a></li>
                 </ul>
             </nav>
         <div class="btn-container">
@@ -20,7 +20,8 @@
                 </svg>
             </button>
 
-            <button class="header-btn" type="button">Buy now</button>
+            <button class="header-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
+                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use></button>
         </div>
             </div>
         <!-- mobile-menu -->
@@ -31,15 +32,16 @@
                     </svg>
                 </button>
 
-                <button class="mobile-btn" type="button">Buy now</button>
+                <button class="mobile-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
+                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use></button>
             
                 <div>
-                    <ul class="mobile-menu-list list">
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link link" href="">Home</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link link" href="">About us</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link link" href="">How it’s made?</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link link" href="">Our products</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link link" href="">Contact</a></li>
+                    <ul class="mobile-menu-list">
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Home</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">About us</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">How it’s made?</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Our products</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Contact</a></li>
 
                     </ul>
                 </div>
