--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -1,10 +1,11 @@
 <section class="hiro">
-    <div class="container">
+    <div class="container ">
     <h1 class="hiro-title"><span class="hiro-title__part">ice cream made with</span> passion</h1>
     
     <ul class="btn-colection list">
         <li class="btn-colection__item"><button class="btn-pre-hiro" type="button">Products</button></li>
         <li class="btn-colection__item"><button class="btn-pre-hiro" type="button">How it’s made?</button></li>
     </ul>
+    <div class="img-container"><img src="/images/images_headder_hiro/mobile/ice-mobile.png" alt="ice cream"></div>
     </div>
 </section>
