--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -8,8 +8,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-ul {
+h6 {
   margin: 0;
   padding: 0;
 }
@@ -20,10 +19,13 @@ img {
   height: auto;
 }
 
-.list {
-  list-style: none;
+a {
+  text-decoration: none;
 }
 
-.link {
-  text-decoration: none;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
