--- a/src/sass/layout/_hiro.scss
+++ b/src/sass/layout/_hiro.scss
@@ -36,14 +36,20 @@
     background: var(--primary-white-color);
     border-radius: 22px;
     border: none;
+    padding: 10px;
     margin: 0 auto;
     font-style: normal;
     font-weight: bold;
-    font-size: 16px;
-    line-height: 1.31;
+    font-size: 8px;
+    line-height: 1.25;
     display: flex;
     align-items: center;
     text-align: center;
 
     color: var(--accent-color);
+}
+
+.img-container {
+    width: 171px;
+    height: 410px;
 }
