--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .container {
 padding: 0 20px;
-/* justify-content: center; */
+justify-content: center; 
 @media screen and (min-width: 480px){
     margin: 0 auto;
 }
