--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,51 +1,45 @@
 <section class="section">
   <div class="container container_galery">
-    <div
-      id="container"
-      class="js-masonry"
-      data-masonry-options='{ "columnWidth": 15, "itemSelector": ".item" }'
-    >
-    <div class="stamp stamp1 item"></div>
-  
-    <div class="stamp stamp2 item"></div>
-    <div class="stamp stamp3 item"></div>
+    <div class="item_container">
+      <div
+        id="container"
+        class="js-masonry"
+        data-masonry-options='{ "columnWidth": 15, "itemSelector": ".item" }'
+      >
+        <div class="stamp stamp1 item"></div>
+        <div class="stamp stamp2 item"></div>
+        <div class="stamp stamp3 item"></div>
         <div class="stamp stamp4 item"></div>
-          <!-- <div class="stamp stamp5 item"></div> -->
-     
-    
-    <div class="item">
-      <img src="/images/gallery/ice-cream-1.jpeg" />
-    </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-11.jpeg" />
-    </div>
-              <div class="stamp stamp6 item"></div>
 
-    <div class="item">
-      <img src="/images/gallery/ice-cream-5.jpeg" />
+        <div class="item">
+          <img src="/images/gallery/ice-cream-1.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-11.jpeg" />
+        </div>
+
+        <div class="stamp stamp5 item"></div>
+
+        <div class="item">
+          <img src="/images/gallery/ice-cream-5.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-3.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-14.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-4.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-6.jpeg" />
+        </div>
+        <div class="item">
+          <img src="/images/gallery/ice-cream-7.jpeg" />
+        </div>
+
+      </div>
     </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-3.jpeg" />
-    </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-14.jpeg" />
-    </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-4.jpeg" />
-    </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-6.jpeg" />
-    </div>
-    <div class="item">
-      <img src="/images/gallery/ice-cream-7.jpeg" />
-    </div>
-    <!-- <div class="item">
-      <img src="/images/gallery/ice-cream-10.jpeg" />
-    </div> -->
- 
-    <!-- <div class="item w2">
-      <img src="/images/gallery/ice-cream-8.jpeg" />
-    </div> -->
   </div>
-</div>
 </section>
