header__scss_progres

--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -1,11 +1,76 @@
-<section class="hiro">
-    <div class="container ">
-    <h1 class="hiro-title"><span class="hiro-title__part">ice cream made with</span> passion</h1>
+<section class="hero">
+
+    <div class="container hero__container">
+
+        <div class="hero__container--left">
+
+            <div class="hero__description">
+
+              <h1 class="hero-title"><span class="hero-title__part">ice cream made with</span> passion</h1>
     
-    <ul class="btn-colection list">
-        <li class="btn-colection__item"><button class="btn-pre-hiro" type="button">Products</button></li>
-        <li class="btn-colection__item"><button class="btn-pre-hiro" type="button">How it’s made?</button></li>
-    </ul>
-    <div class="img-container"><img src="/images/images_headder_hiro/mobile/ice-mobile.png" alt="ice cream"></div>
+              <ul class="btn-colection list">
+                 <li class="btn-colection__item"><button class="btn-pre-hero" type="button">Products</button></li>
+                 <li class="btn-colection__item"><button class="btn-pre-hero" type="button">How it’s made?</button></li>
+              </ul>
+
+            </div>
+
+            <div class="left__part">
+                <picture>
+                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="" media="(min-width: 768px)" type="image/png">
+                    <source srcset="" type="image/png">
+                    <img class="" src="/images/images_headder_hiro/tablet/jar-tablet.png" alt="milk">
+                </picture>
+
+                <div class="left__part--description">
+                    <p class="left__part--text">Lorem ipsum dolor sit amet, 
+                       consectetur adipiscing elit, 
+                       sed do eiusmod tempor incididunt ut labore et</p>
+                    <button class="btn" type="button"></button>
+                </div>
+            </div>
+
+            </div>
+
+                <picture class="ice-cream__pic">
+                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="" media="(min-width: 768px)" type="image/png">
+                    <source srcset="" type="image/png">
+                    <img class="" src="/images/images_headder_hiro/tablet/ice-tablet.png" alt="ice cream">
+                </picture>
+        
+            <div class="hero__container--right">
+                        
+                        <ul>
+                            <li>
+                                <p>16</p>
+                                <p>cafs</p>
+                            </li>
+                            <li>
+                                <p>23</p>
+                                <p>food truck</p>
+                            </li>
+                        </ul>
+
+                <picture>
+                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="" media="(min-width: 768px)" type="image/png">
+                    <source srcset="" type="image/png">
+                    <img class="" src="/images/images_headder_hiro/tablet/girl-tablet.png" alt="girl">
+                </picture>
+            
+            </div>
+            
     </div>
+
 </section>
+
+            <!-- <div class="about__img">
+                <picture>
+                    <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="/images/about/tablet/cow-tablet.png 1x, /images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
+                    <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
+                    <img class="about__img" src="/images/about/dekstop/cow-dekstop.png" alt="cow/milk">
+                </picture>
+            </div> -->
