--- a/src/sass/layout/_hiro.scss
+++ b/src/sass/layout/_hiro.scss
@@ -1,9 +1,72 @@
-.hiro {
-    padding-top: 60px;
+.hero {
+    width: 100vw;
     background: var(--background-pink);
+
+    
 }
 
-.hiro-title {
+.hero__container {
+    position: relative;
+    padding-top: 193px;
+    padding-bottom: 160px;
+    display: flex;
+    justify-content: space-between;
+
+    @media screen and (min-width: 768px) {
+      padding-top: 156px;
+      padding-bottom: 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 0;
+    }
+}
+
+.hero__container--left {
+    display: flex;
+    z-index: 9;
+
+    @media screen and (min-width: 768px) {
+      flex-direction: column;
+      justify-content: space-between;
+    }
+}
+
+.left__part {
+    display: none;
+
+     @media screen and (min-width: 768px) {
+       display: flex;
+     }
+}
+
+.ice-cream__pic {
+    position: absolute;
+    bottom: 0;
+    right: 32px;
+    z-index: 8;
+
+    @media screen and (min-width: 768px) {
+        right: 247px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      right: 450px;
+    }
+}
+
+.hero__container--right {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+.hero-title {
     display: block;
     width: 162px;
     font-family: Titan One;
@@ -16,7 +79,7 @@
     color: var(--accent-color);
 }
 
-.hiro-title__part {
+.hero-title__part {
     font-family: Titan One;
     font-style: normal;
     font-weight: normal;
@@ -32,7 +95,7 @@
     align-items: center;
 }
 
-.btn-pre-hiro {
+.btn-pre-hero {
     background: var(--primary-white-color);
     border-radius: 22px;
     border: none;
@@ -49,7 +112,21 @@
     color: var(--accent-color);
 }
 
-.img-container {
-    width: 171px;
-    height: 410px;
+/* .left__part--description {
+
+} */
+
+.left__part--text {
+    width: 200px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.42;
+    
+    color: var(--primary-white-color);
 }
+
+
+
+
