добавляет оптимизацию картинок под ретину, webp

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -12,33 +12,458 @@
         <div class="stamp stamp4 item"></div>
 
         <div class="item">
-          <img src="/images/gallery/ice-cream-1.jpeg" />
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-1.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-1@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-1.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-1@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-1.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-1@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-1.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-1@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-1.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-1@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-1.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-1@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
         </div>
+
         <div class="item">
-          <img src="/images/gallery/ice-cream-11.jpeg" />
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-11.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-11@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-11.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-11@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-11.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-11@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-11.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-11@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-11.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-11@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/desktop/ice-cream-11.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-11@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
         </div>
 
         <div class="stamp stamp5 item"></div>
 
         <div class="item">
-          <img src="/images/gallery/ice-cream-5.jpeg" />
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-5.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-5@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-5.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-5@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-5.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-5@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-5.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-5@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-5.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-5@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-5.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-5@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
         </div>
         <div class="item">
-          <img src="/images/gallery/ice-cream-3.jpeg" />
-        </div>
-        <div class="item">
-          <img src="/images/gallery/ice-cream-14.jpeg" />
-        </div>
-        <div class="item">
-          <img src="/images/gallery/ice-cream-4.jpeg" />
-        </div>
-        <div class="item">
-          <img src="/images/gallery/ice-cream-6.jpeg" />
-        </div>
-        <div class="item">
-          <img src="/images/gallery/ice-cream-7.jpeg" />
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-3.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-3@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-3.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-3@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-3.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-3@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-3.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-3@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-3.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-3@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-3.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-3@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
         </div>
 
+        <div class="item">
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-14.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-14@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-14.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-14@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-14.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-14@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-14.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-14@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-14.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-14@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-14.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-14@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
+        </div>
+        <div class="item">
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-4.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-4@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-4.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-4@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-4.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-4@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-4.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-4@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-4.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-4@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-4.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-4@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
+        </div>
+        <div class="item">
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-6.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-6@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-6.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-6@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-6.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-6@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-6.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-6@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-6.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-6@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-6.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-6@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
+        </div>
+        <div class="item">
+          <picture>
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/webmobile/ice-cream-7.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-7@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:767px)"
+              srcset="
+                /images/gallery/mobile/ice-cream-7.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-7@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/webtablet/ice-cream-7.webp       1x,
+                /images/gallery/web2xdesktop/ice-cream-7@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(max-width:1199px)"
+              srcset="
+                /images/gallery/tablet/ice-cream-7.jpeg       1x,
+                /images/gallery/desktop2x/ice-cream-7@2x.jpeg 2x
+              "
+            />
+
+            <source
+              media="(min-width:1200px)"
+              srcset="
+                /images/gallery/webdesktop/ice-cream-7.webp      1x,
+                /images/gallery/web2xdesktop/ice-cream-7@2x.webp 2x
+              "
+              type="image/webp"
+            />
+
+            <source
+              media="(min-width:1200px))"
+              srcset="
+                /images/gallery/desktop/ice-cream-7.jpeg      1x,
+                /images/gallery/desktop2x/ice-cream-7@2x.jpeg 2x
+              "
+            />
+
+            <img src="#" alt="Ice-Cream" />
+          </picture>
+        </div>
       </div>
     </div>
   </div>
