вносит правки в section_gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section_gallery">
   <div class="container container_galery">
     <div class="item_container">
       <div
