--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,5 +1,4 @@
-.container_galery {
-  // margin-top: -141px;
+.section_gallery {
   background-image: linear-gradient(
     to top,
     var(--primary-white-color) 60%,
