--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -96,16 +96,18 @@
 
         </ul>
 
-        <!-- <ul class="contacts-button-list">
-            <li class="contacts-button-list__item"><button class="contacts-button" type="button">Our Locations
+        <ul class="contacts-button-list">
+            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__map"
+                    type="button">Our Locations
                     <svg class="contacts-button-icon">
-                        <use href="./images/icons.svg#icon-more"></use>
+                        <use href="./images/svg/icons.svg#icon-more"></use>
                     </svg></button></li>
-            <li class="contacts-button-list__item"><button class="contacts-button" type="button">Franchise
+            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__franchise"
+                    type="button">Franchise
                     <svg class="contacts-button-icon">
-                        <use href="./images/icons.svg#icon-more"></use>
+                        <use href="./images/svg/icons.svg#icon-more"></use>
                     </svg></button></li>
-        </ul> -->
+        </ul>
     </div>
 
 </section>
